--- a/Bonobo.Git.Server/Content/Site.css
+++ b/Bonobo.Git.Server/Content/Site.css
@@ -271,19 +271,5 @@ img.repo-logo { width:36px; height: auto; image-rendering: -moz-crisp-edges; ima
 }
 
 .edit-delete-button {
-    margin-left: 8rem;
-    background-color: red;
-    color: white;
-}
-
-@media only screen and (min-width: 800px) {
-    .edit-delete-button {
-        margin-left: 12rem !important;
-    }
-}
-
-@media only screen and (min-width: 1000px) {
-    .edit-delete-button {
-        margin-left: 16rem !important;
-    }
+    float: right;
 }
