Change icons on Code Action

--- a/Bonobo.Git.Server/Views/Repository/_RepositoryLayout.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/_RepositoryLayout.cshtml
@@ -24,7 +24,7 @@ else
                 @*Dropdown Menu*@
                 <li class="dropdown pure-form">
                     <details style="display:inline-block;" class="collapse-on-blur">
-                        <summary><i class="fa fa-chevron-down"></i>@Resources.Repository_Layout_Code</summary>
+                        <summary><i class="fa fa-code"></i>@Resources.Repository_Layout_Code <i class="fa fa-caret-down"></i></summary>
                         <div style="position:absolute;">
                             @*To get dropdown box as Relative to Fixed position*@
                             <div class="dropdownBox">
